Hama Change Log

Release 0.3 - Unreleased

  NEW FEATURES

    HAMA-374: Add LocalBSPRunner (Thomas Jungblut via edwardyoon)
    HAMA-380: Add BSPMessageBundle to reduce RPC overhead (Miklos Erdelyi via edwardyoon)
    
  BUG FIXES

    HAMA-393: Add environment variable 'HAMA_HEAPSIZE' to hama-env.sh (edwardyoon)
    
  IMPROVEMENTS

    HAMA-394: Refactor 'hama' script and pom.xml (edwardyoon)
    HAMA-388: Add a profile 'forrest' to generate the website (edwardyoon)
    HAMA-392: Make zk session-timeout configurable (edwardyoon)
    HAMA-389: Make the thread pool size user configurable (Thomas Jungblut via edwardyoon)
    HAMA-386: Removing 'System.arraycopy(...)' call from ByteMessage (edwardyoon)
    HAMA-379: Setting default values to job.setNumBspTask() (Thomas Jungblut via edwardyoon)
    HAMA-376: Refactor BSPMaster and GroomServer (ChiaHung Lin via edwardyoon)
    HAMA-382: Refactor HAMA POM (Tommaso Teofili)
    HAMA-362: Re-design a new data structure of BSPMessage (Thomas Jungblut via edwardyoon)   
    HAMA-369: Reduce overhead of local communications (Miklos Erdelyi via edwardyoon)
    HAMA-371: Add a parameter to build.xml to allow developers deciding to reset content 
                       in conf files or not when building artifacts (ChiaHung Lin via edwardyoon)

Release 0.2 - Unreleased

  NEW FEATURES

    HAMA-339: Add job status command (edwardyoon)
    HAMA-337: Provide Apache Maven building support (Tommaso Teofili via edwardyoon)
    HAMA-304: Allow BSP peers to get a list of all other peers 
                executing tasks of the same job (Filipe Manana via edwardyoon)
    HAMA-267: Add command-line interface for job management
                (hyunsik via edwardyoon)
    HAMA-279: Add "serialize printing" to examples (edwardyoon)
    HAMA-272: Hama/Zookeeper Integration (edwardyoon)
    HAMA-265: Add example Pi estimatior based on BSP (edwardyoon)
    HAMA-266: Add Ant target to generate the UML class diagrams (edwardyoon)